# logger

./: .clang-format  .clang-format-bak  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: log_builder.cc.0DA0FAD37BE42789.idx  log_builder.h.077BB0A035EB7FE8.idx  log_builderimpl.cc.73B879CDA46E4B5F.idx  log_buildimpl.h.DCE0CDFD8C2F241A.idx  log_level.h.B8AE9E5CA22DB150.idx  log_record.h.619AC2F7BBA4B564.idx  main.cc.62BEF69D8D0AD36F.idx  test_log_record.cc.35DF12705AAE511B.idx
examples/: README.md  basic_usage.cc
include/: logger.hpp
include/jzlog/: logger.h  logger.hpp  logger_impl.hpp
include/jzlog/archive_manager/: archive_manager.h
include/jzlog/core/: log_builder.h  log_level.h  log_record.h
include/jzlog/sinks/: file_sink.h  network_sink.h  sink.h
include/jzlog/slinks/: file_sink.h  sink.h
include/jzlog/utils/: fixed_buffer.h  log_buffer.h  thread_safe_queue.hpp
log/: log.txt
src/: logger.cc
src/archive_manager/: archive_manager.cc
src/core/: log_builder.cc
src/sinks/: file_sink.cc  network_sink.cc
src/slinks/: file_slink.cc
test/: test_log.cc  test_log_level.cc  test_log_record.cc
tests/: test_archive_integration.cc  test_fixed_buffer.cc  test_log.cc  test_log_record.cc  test_network_sink_client.cc  test_network_sink_server.cc
